--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
 deploy:
   stage: deploy
   script:
+    - cp $ENV "$(pwd)/.env"
     - docker login -u "${REGISTRY_FIBO_USERNAME}" -p "${REGISTRY_FIBO_PASSWORD}" registry.fibo.cloud
     - docker build --cache-from registry.fibo.cloud/ielts/web -t registry.fibo.cloud/ielts/web .
     - docker push registry.fibo.cloud/ielts/web
