--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-toast": "1.2.2",
     "@radix-ui/react-tooltip": "1.1.3",
+    "@tanstack/react-table": "^8.20.5",
     "ahooks": "^3.8.1",
     "axios": "1.7.7",
     "class-variance-authority": "0.7.0",
-    "clsx": "2.1.1",
+    "clsx": "^2.1.1",
     "lucide-react": "0.454.0",
     "next": "15.0.2",
     "next-auth": "5.0.0-beta.25",
