--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-AUTH_SECRET="Y+YiEkqxF9io8Zop6I/TftcHnBozLSDaNLLb41/wfVs=" # Added by `npx auth`. Read more: https://cli.authjs.dev
+NEXTAUTH_SECRET="Y+YiEkqxF9io8Zop6I/TftcHnBozLSDaNLLb41/wfVs=" # Added by `npx auth`. Read more: https://cli.authjs.dev
 
 # Third Service Config
 NEXT_PUBLIC_SERVICE_URL="https://api.ieltsprep.mn/api/v1"
