--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NEXTAUTH_SECRET="Y+YiEkqxF9io8Zop6I/TftcHnBozLSDaNLLb41/wfVs=" # Added by `npx a
 
 # Third Service Config
 NEXT_PUBLIC_SERVICE_URL="https://api.ieltsprep.mn/api/v1"
+HOSTNAME="0.0.0.0"
