--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "3.9.1",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "1.1.1",
     "@radix-ui/react-collapsible": "1.1.1",
     "@radix-ui/react-dialog": "1.1.2",
@@ -24,6 +25,7 @@
     "ahooks": "^3.8.1",
     "axios": "1.7.7",
     "class-variance-authority": "0.7.0",
+    "react-fast-marquee": "^1.6.5",
     "clsx": "^2.1.1",
     "lucide-react": "0.454.0",
     "next": "15.0.2",
