added sign in up footer

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "3.9.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "1.1.1",
     "@radix-ui/react-dialog": "1.1.2",
     "@radix-ui/react-dropdown-menu": "2.1.2",
@@ -25,7 +26,6 @@
     "ahooks": "^3.8.1",
     "axios": "1.7.7",
     "class-variance-authority": "0.7.0",
-    "react-fast-marquee": "^1.6.5",
     "clsx": "^2.1.1",
     "lucide-react": "0.454.0",
     "next": "15.0.2",
@@ -33,11 +33,13 @@
     "next-themes": "0.3.0",
     "react": "18",
     "react-dom": "18",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "7.53.1",
     "sonner": "1.5.0",
     "tailwind-merge": "2.5.4",
     "tailwindcss-animate": "1.0.7",
-    "zod": "3.23.8"
+    "zod": "3.23.8",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "20",
@@ -48,5 +50,6 @@
     "postcss": "8",
     "tailwindcss": "3.4.1",
     "typescript": "5"
-  }
+  },
+  "packageManager": "pnpm@10.2.1+sha512.398035c7bd696d0ba0b10a688ed558285329d27ea994804a52bad9167d8e3a72bcb993f9699585d3ca25779ac64949ef422757a6c31102c12ab932e5cbe5cc92"
 }
